--- a/src/pages/homePage/homepage.module.css
+++ b/src/pages/homePage/homepage.module.css
@@ -1,3 +1,10 @@
-.HomePage{
-    color:red;
+.HomePage {
+}
+.mainHeading {
+  text-align: var(--text-center);
+}
+.debatesContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
