--- a/src/ui/navbar.module.css
+++ b/src/ui/navbar.module.css
@@ -5,11 +5,12 @@
 .navItem {
   display: inline-block;
   width: 100%;
-  background-color: blue;
+  background-color: var(--ui-background);
   text-align: center;
   text-decoration: none;
   padding: 0.5em 0;
-  color: white;
+  color: rgb(215, 215, 215);
+  font-size: var(--text-small);
 }
 .navItem:not(:last-child) {
   border-right: 1px solid white;
